ingress/nginx-vs.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: shop
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: app.34.136.12.146.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  ingressClassName: nginx
